deploy: e8b80696218ebd85488e1ab40c3199f20fdb7f0f

--- a/safety.html
+++ b/safety.html
@@ -143,11 +143,11 @@
     <hr>
     
     <p>First and foremost, with regard to experimental conditions, our laboratory is equipped with sufficient, accredited, and secure facilities to facilitate and ensure the successful conduct of our experiments. We operate a standard level 1 microbiological laboratory designated for the manipulation of low-risk microorganisms, such as *Escherichia coli*, which includes an ultra-clean workstation and essential protective equipment, including disposable masks and gloves. In addition, we have a range of specialized and safe experimental equipment to support our research endeavors. Furthermore, we have established a moderate containment laboratory specifically designed for experiments that necessitate elevated aseptic and safety standards, featuring a professional biosafety cabinet. To enhance personal protective measures, our laboratory provides an ample supply of disposable medical gloves and masks for all personnel, thereby significantly mitigating the risks associated with microbial inhalation and direct exposure to hazardous substances. We have also placed prominent signs at the entrance of our laboratory to ensure that all personnel can clearly understand the safety regulations and relevant precaution</p>
-     <img alt="picture-3" class="rounded mx-auto d-block" src=" /safety/add1.webp">
-    <img alt="picture-4" class="rounded mx-auto d-block" src=" /safety/image4.webp">
-    <img alt="picture-5" class="rounded mx-auto d-block" src=" /safety/image5.webp">
-    <img alt="picture-6" class="rounded mx-auto d-block" src=" /safety/image6.webp">
-    <img alt="picture-7" class="rounded mx-auto d-block" src=" /safety/image7.webp">
+     <img alt="picture-3" class="rounded mx-auto d-block" src="static/safety/image3.webp">
+    <img alt="picture-4" class="rounded mx-auto d-block" src="static/safety/image4.webp">
+    <img alt="picture-5" class="rounded mx-auto d-block" src="static/safety/image5.webp">
+    <img alt="picture-6" class="rounded mx-auto d-block" src="static/safety/image6.webp">
+    <img alt="picture-7" class="rounded mx-auto d-block" src="static/safety/image7.webp">
     
   </div>
 </div>
@@ -160,9 +160,9 @@
     <p>Our laboratory has established comprehensive risk control measures, equipped with sufficient emergency medical kits to provide timely treatment for personnel in the event of exposure to hazardous substances or other injuries. The laboratory walls are adorned with numerous reminders of safety protocols and standards, aimed at continuously reinforcing the safety awareness of all experimental personnel. Additionally, safety guidelines and emergency contact numbers for the safety center are prominently displayed on the outer walls to ensure that all individuals entering the facility can quickly access relevant information.</p>
     <p>To ensure routine personal protection, our laboratory provides an ample supply of disposable medical gloves and masks, thereby effectively reducing the risk of inhaling microorganisms. Access to the entire laboratory building is strictly regulated; individuals wishing to enter must use their activated campus cards, which will not function unless they have submitted an application and received approval from the Lab Safety Center. The keys to our specific laboratory are managed by designated personnel, with access limited to authorized team members to ensure the safety of the research environment.</p>
     <p>Furthermore, our laboratory implements a stringent and standardized management system for hazardous chemicals and microorganisms. We have designated storage spaces that are clearly marked with warning signs to enhance safety and compliance. The keys to access these areas are also securely managed by designated personnel to further ensure the effective implementation of safety management practices.</p>
-    <img alt="picture-8" class="rounded mx-auto d-block" src=" /safety/image8.webp">
-    <img alt="picture-9" class="rounded mx-auto d-block" src=" /safety/image9.webp">
-    <img alt="picture-10" class="rounded mx-auto d-block" src=" /safety/image10.webp">
+    <img alt="picture-8" class="rounded mx-auto d-block" src="static/safety/image8.webp">
+    <img alt="picture-9" class="rounded mx-auto d-block" src="static/safety/image9.webp">
+    <img alt="picture-10" class="rounded mx-auto d-block" src="static/safety/image10.webp">
 
 
   </div>
