deploy: 860b86f5434ca98a7a796ac14f3953068ad8e67a

--- a/engineering.html
+++ b/engineering.html
@@ -314,6 +314,10 @@
         <p><b>E-mail:</b> <a href="mailto:11@lzu.edu.cn">susu2969@foxmail.com</a></p>
       </div>
     </div>
+    <hr>
+    <div class="md-copyright__highlight">
+      Copyright &copy; 2024 iDEC. CC-BY-4.0 | The International Directed Evolution Competition (iDEC) is a Scottish Charitable Incorporate Organisation (SCIO), registered in Scotland, with charity number：SC050826
+    </div>
   </div>
 </footer>
 
