deploy: 55e23427bf83751ee81c1884746f2d94581edd3d

--- a/collaboration.html
+++ b/collaboration.html
@@ -164,23 +164,19 @@
       <div class="col-lg-8 col-xs-12">
         <h4 class="mb-3">About Us</h4>
         <div class="row">
-          <div class="col-lg-6 col-xs-12 text-center">
-            <img src=" /logo-lzu.png" height="100px" class="mr-4">
+          <div class="col-lg-6 col-xs-12 text-left">
+            <img src="static/footer-logo/logo-lzu.png" height="100px" class="mr-4">
             <a>Lanzhou University</a>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-6 col-xs-12" style="    position: relative;
-    left: 45px;">
-            <img src=" /footer/footerlogo2.png" height="100px" class="mr-4">
-            <a>School of Stomatology Lanzhou University</a>
+          <div class="col-lg-6 col-xs-12 text-left">
+            <img src="static/footer-logo/footer.png" height="100px" class="mr-4">
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-6 col-xs-12" style="    position: relative;
-    left: 45px;">
-            <img src=" /footer/footer.png" height="100px" class="mr-4">
-            <a>School of Stomatology Lanzhou University</a>
+          <div class="col-lg-6 col-xs-12 text-left">
+            <img src="static/footer-logo/footerlogo2.png" height="100px" class="mr-4">
           </div>
         </div>
       </div>
