--- a/wiki/pages/collaboration.html
+++ b/wiki/pages/collaboration.html
@@ -18,14 +18,14 @@
   <ul>
     <li>
       <h3>1. Co-authored the E. coliNissle1917 white paper with eight universities</h3>
-      <p>Our team worked with eight Chinese IGEM teams, including PekingHSC and NJTech- China, to introduce in detail the use history, application scenarios, biosafety and market development prospects of EcN (Escherichia coli Nissle 1917). It provides a reliable reference for the general public and related practitioners.</p>
+      <p>Our team worked with eight Chinese iDEC teams, including PekingHSC and NJTech- China, to introduce in detail the use history, application scenarios, biosafety and market development prospects of EcN (Escherichia coli Nissle 1917). It provides a reliable reference for the general public and related practitioners.</p>
       <iframe src="{{ url_for('static', filename = 'collaboration/EcN.pdf') }}" frameborder="0" style="width:75vw; height:85vh;margin: 15px;"></iframe>
 
 
     </li>
     <li>
-      <h3>2. Participated in the 11th Conference of China iGEMer Community (hereinafter referred to as CCiC)</h3>
-      <p>The Conference of China iGEMer Community is a national exchange meeting independently initiated by the Chinese iGEM participating teams, aiming to provide a platform for the participating iGEM teams and Chinese synthetic biology young enthusiasts to share resources and promote mutual learning and exchanges. This year, our team travelled to Suzhou to participate in the CCIC conference organized by Xi'an Jiaotong-Liverpool University with the theme of "SynBio Nexus".</p>
+      <h3>2. Participated in the 11th Conference of China iDECer Community (hereinafter referred to as CCiC)</h3>
+      <p>The Conference of China iDECer Community is a national exchange meeting independently initiated by the Chinese iDEC participating teams, aiming to provide a platform for the participating iDEC teams and Chinese synthetic biology young enthusiasts to share resources and promote mutual learning and exchanges. This year, our team travelled to Suzhou to participate in the CCIC conference organized by Xi'an Jiaotong-Liverpool University with the theme of "SynBio Nexus".</p>
       <img  class="rounded mx-auto d-block" src="{{ url_for('static', filename = 'collaboration/image1.webp') }}" alt="picture-1">
     </li>
     <li>
