--- a/wiki/pages/parts.html
+++ b/wiki/pages/parts.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
   
 {% block title %}BioBrick Parts{% endblock %}
-{% block lead %}You can learn our parts’ information which we uploaded to iGEMs Registry of Standard Biological Parts.{% endblock %}
+{% block lead %}You can learn our parts’ information which we uploaded to iDECs Registry of Standard Biological Parts.{% endblock %}
 
 {% block page_content %}
 
@@ -74,9 +74,9 @@
       <hr>
         <h3>Part:BBa_K5161003</h3><div>
             <h4>GLP-1 Recombinant Protein</h4>
-            <p>The recombinant protein includes the GLP-1 fragment, pelB, Dnak, a flexible linker peptide sequence, and a Flag tag sequence.It is also an improved part of the 2024 Squirrel-CHN iGEM team Pel-GLP-1 Coding.</p>
+            <p>The recombinant protein includes the GLP-1 fragment, pelB, Dnak, a flexible linker peptide sequence, and a Flag tag sequence.It is also an improved part of the 2024 Squirrel-CHN iDEC team Pel-GLP-1 Coding.</p>
             <h4>Usage and Biology</h4>
-            <p>In this particular project, the overarching purpose of designing the GLP-1 recombinant protein is to enhance the adaptability and flexibility of Pel-GLP-1 Coding with the aim of achieving a glucose concentration-responsive functional release of GLP-1. Specifically, the release switch for GLP-1 is activated when the blood glucose levels ascend, which then proceeds to lower the glucose levels. Conversely, it is turned off when the glucose levels are low. The recombinant protein is composed of several key components, including the GLP-1 fragment, pelB, Dnak, a flexible linker peptide sequence, and a Flag tag sequence. As previously mentioned, pelB functions as a signal sequence that directs GLP-1 for extracellular secretion. Dnak, on the other hand, is the crucial core component of the glucose regulatory switch (more detailed information can be obtained from 2024 LZU-MEDICINE-CHINA iGEM team DnaK).</p>
+            <p>In this particular project, the overarching purpose of designing the GLP-1 recombinant protein is to enhance the adaptability and flexibility of Pel-GLP-1 Coding with the aim of achieving a glucose concentration-responsive functional release of GLP-1. Specifically, the release switch for GLP-1 is activated when the blood glucose levels ascend, which then proceeds to lower the glucose levels. Conversely, it is turned off when the glucose levels are low. The recombinant protein is composed of several key components, including the GLP-1 fragment, pelB, Dnak, a flexible linker peptide sequence, and a Flag tag sequence. As previously mentioned, pelB functions as a signal sequence that directs GLP-1 for extracellular secretion. Dnak, on the other hand, is the crucial core component of the glucose regulatory switch (more detailed information can be obtained from 2024 Northwest Union iDEC team DnaK).</p>
             <p>The mechanism of its action is as follows: When the glucose concentrations increase, the elevated internal glucose accelerates the metabolic process, which in turn elevates the ATP/ADP ratio. This leads to a weakening of the chaperone interaction between Dnak and ClpB. As the binding affinity reduces, the recombinant protein disassembles. Subsequently, this disassembly guides the release of the recombinant protein into the extracellular space. This intricate process demonstrates the sophisticated design and functionality of the GLP-1 recombinant protein system, which holds great potential for applications in the field of glucose regulation and related biomedical research. It provides a novel approach to precisely control the release of GLP-1 in response to changes in glucose levels, potentially leading to the development of more effective therapeutic strategies for conditions related to glucose metabolism disorders. Further investigations and optimizations of this system could pave the way for significant advancements in the treatment and management of such disorders, contributing to improved healthcare outcomes in the future.</p>
 
             <h4>Modulation and Holisticness</h4>
