deploy: 646482645031dc108f7752f9e68214848fa2d3bd

--- a/members.html
+++ b/members.html
@@ -181,14 +181,14 @@
     <figure class="figure">
       <img src="static/members/image7.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Zhaoyin Su</figcaption>
-      <figcaption class="figure-caption">Hello, everyone! I come from the hometown of smelly and flavorful snail powder - Liuzhou, Guangxi. I am passionate about exploring this world and participating in pioneering and innovative research. In terms of honor, I have served as the head of the national college students' innovation and entrepreneurship project, published SCI papers as the first author. Swimming in the ocean of science gives me infinite joy. I am honored to be the captain of Lanzhou University iGEM team this year. Without further ado, let's create brilliance together this year!</figcaption>
+      <figcaption class="figure-caption">Hello, everyone! I come from the hometown of smelly and flavorful snail powder - Liuzhou, Guangxi. I am passionate about exploring this world and participating in pioneering and innovative research. In terms of honor, I have served as the head of the national college students' innovation and entrepreneurship project, published SCI papers as the first author. Swimming in the ocean of science gives me infinite joy. I am honored to be the captain of Lanzhou University iDEC team this year. Without further ado, let's create brilliance together this year!</figcaption>
     </figure>
   </div>
   <div class="col-4">
     <figure class="figure">
       <img src="static/members/image8.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Yanzong Zhao</figcaption>
-      <figcaption class="figure-caption">Piano level 10, slight research on music theory, like playing and singing. He also has a certain talent for photography and loves outdoor travel. The motto is read ten thousand books, travel ten thousand miles. Scientific research can not be done in three days, perseverance is the foundation of victory. I hope that in the next half year of iGEM competition, we can deeply learn the research methods in the field of synthetic biology together, and shed a drop of sweat for the progress of human science.</figcaption>
+      <figcaption class="figure-caption">Piano level 10, slight research on music theory, like playing and singing. He also has a certain talent for photography and loves outdoor travel. The motto is read ten thousand books, travel ten thousand miles. Scientific research can not be done in three days, perseverance is the foundation of victory. I hope that in the next half year of iDEC competition, we can deeply learn the research methods in the field of synthetic biology together, and shed a drop of sweat for the progress of human science.</figcaption>
     </figure>
   </div>
 
@@ -205,7 +205,7 @@
     <figure class="figure">
       <img src="static/members/image9.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Xiangyu Wang</figcaption>
-      <figcaption class="figure-caption">Hello everyone, my name is Wang Xiangyu, from the First Clinical Medical College of Lanzhou University. I like to look at things and the underlying laws of society from a philosophical perspective, and I am also keen to explore various mysteries of human diseases. Love badminton, table tennis and other sports in life. I am very glad to be able to play my value in LZU-MEDICINE-CHINA as the team leader of HP, and I hope to make my own modest contribution in it!</figcaption>
+      <figcaption class="figure-caption">Hello everyone, my name is Wang Xiangyu, from the First Clinical Medical College of Lanzhou University. I like to look at things and the underlying laws of society from a philosophical perspective, and I am also keen to explore various mysteries of human diseases. Love badminton, table tennis and other sports in life. I am very glad to be able to play my value in Northwest Union as the team leader of HP, and I hope to make my own modest contribution in it!</figcaption>
     </figure>
   </div>
   <div class="col-4">
@@ -230,7 +230,7 @@
     <figure class="figure">
       <img src="static/members/image12.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Yifan Wang</figcaption>
-      <figcaption class="figure-caption">Love life, always enjoy exploring the unknown things, optimistic personality, can always maintain high morale. It is a great honor to join the LZU-MEDICINE-CHINA team, and we look forward to achieving a satisfactory result
+      <figcaption class="figure-caption">Love life, always enjoy exploring the unknown things, optimistic personality, can always maintain high morale. It is a great honor to join the Northwest Union team, and we look forward to achieving a satisfactory result
       </figcaption>
     </figure>
   </div>
@@ -253,7 +253,7 @@
     <figure class="figure">
       <img src="static/members/image15.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Yichen Feng</figcaption>
-      <figcaption class="figure-caption">I am from Wuhan, Hubei Province, and my major is Stomatology. I have won the Scholarship of Grateful Chinese Modern and Modern Scientists and other honors. Love football, but haven't played for a long time, close to hanging up his boots. It is my great honor to be a member of the LZU-MEDICINE-CHINA 2024 group, and I hope to cooperate with friends from different colleges to give full play to my skills and show the elegance of Chinese students on the international stage.</figcaption>
+      <figcaption class="figure-caption">I am from Wuhan, Hubei Province, and my major is Stomatology. I have won the Scholarship of Grateful Chinese Modern and Modern Scientists and other honors. Love football, but haven't played for a long time, close to hanging up his boots. It is my great honor to be a member of the Northwest Union 2024 group, and I hope to cooperate with friends from different colleges to give full play to my skills and show the elegance of Chinese students on the international stage.</figcaption>
     </figure>
   </div>
   <div class="col-4">
@@ -267,21 +267,21 @@
     <figure class="figure">
       <img src="static/members/image17.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Wenxuan Shao</figcaption>
-      <figcaption class="figure-caption">Like basketball, table tennis, guitar, all kinds of strange knowledge to understand a little. The research side is interested in biomedicine, regenerative medicine and so on. I am very happy and excited to participate in IGEM with you this time, and I hope to work together with you to make a great project. We also hope that our efforts can make some contributions to synthetic biology.</figcaption>
+      <figcaption class="figure-caption">Like basketball, table tennis, guitar, all kinds of strange knowledge to understand a little. The research side is interested in biomedicine, regenerative medicine and so on. I am very happy and excited to participate in iDEC with you this time, and I hope to work together with you to make a great project. We also hope that our efforts can make some contributions to synthetic biology.</figcaption>
     </figure>
   </div>
   <div class="col-4">
     <figure class="figure">
       <img src=" static/members/image18.webp class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Xuanqiao Wang</figcaption>
-      <figcaption class="figure-caption">Favorite sport is football, usually like to play mc and radiation shelter (a little niche). Strong practical ability, once won the provincial second prize in physics competition in high school. It is a great honor to join the igem team and hope to work together to achieve good results.</figcaption>
+      <figcaption class="figure-caption">Favorite sport is football, usually like to play mc and radiation shelter (a little niche). Strong practical ability, once won the provincial second prize in physics competition in high school. It is a great honor to join the iDEC team and hope to work together to achieve good results.</figcaption>
     </figure>
   </div>
   <div class="col-4">
     <figure class="figure">
       <img src="static/members/image19.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Qi Bi</figcaption>
-      <figcaption class="figure-caption">Cheerful personality, wide range of interests, keen to try all kinds of new things. I love clinical medicine very much and hope to contribute my strength to human health with my own efforts. It is a great honor to join the team of LZU-MEDICINE-CHINA, and work hard together to make progress.</figcaption>
+      <figcaption class="figure-caption">Cheerful personality, wide range of interests, keen to try all kinds of new things. I love clinical medicine very much and hope to contribute my strength to human health with my own efforts. It is a great honor to join the team of Northwest Union, and work hard together to make progress.</figcaption>
     </figure>
   </div>
 
@@ -298,7 +298,7 @@
     <figure class="figure">
       <img src="static/members/image21.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Shenhan Yu</figcaption>
-      <figcaption class="figure-caption">Love tennis, swimming, and other sports. Like painting, movies. It is a great honor to join the iGEM team this year, which is a challenge and exercise for me. I hope we can create good results together.</figcaption>
+      <figcaption class="figure-caption">Love tennis, swimming, and other sports. Like painting, movies. It is a great honor to join the iDEC team this year, which is a challenge and exercise for me. I hope we can create good results together.</figcaption>
     </figure>
   </div>
 
@@ -306,7 +306,7 @@
     <figure class="figure">
       <img src="static/members/image22.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Chunlin Fan</figcaption>
-      <figcaption class="figure-caption">I have a peaceful personality and a wide range of hobbies. Moving joy travel, conquer mountains, taste all kinds of food, experience and learn all kinds of sports; Jing likes reading books, knitting all kinds of small objects, trying to do all kinds of handmade gadgets. I am very happy to be a part of the digital module. I hope we can make progress together with you in this iGEM competition and achieve new achievements!
+      <figcaption class="figure-caption">I have a peaceful personality and a wide range of hobbies. Moving joy travel, conquer mountains, taste all kinds of food, experience and learn all kinds of sports; Jing likes reading books, knitting all kinds of small objects, trying to do all kinds of handmade gadgets. I am very happy to be a part of the digital module. I hope we can make progress together with you in this iDEC competition and achieve new achievements!
 
       </figcaption>
     </figure>
@@ -315,7 +315,7 @@
     <figure class="figure">
       <img src="static/members/image23.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Chenchen Li</figcaption>
-      <figcaption class="figure-caption">A new medical student from Suzhou, Jiangsu province, has a wide range of interests but is not good at it. Love to travel and write poems, good at guitar singing, proficient in strategy games. He has won the second prize of the provincial biology competition and loves to explore the secrets of life. Although the ability and seniority are very shallow compared with other seniors, I will still strive to contribute my own strength to LZU-MEDICINE-CHINA!
+      <figcaption class="figure-caption">A new medical student from Suzhou, Jiangsu province, has a wide range of interests but is not good at it. Love to travel and write poems, good at guitar singing, proficient in strategy games. He has won the second prize of the provincial biology competition and loves to explore the secrets of life. Although the ability and seniority are very shallow compared with other seniors, I will still strive to contribute my own strength to Northwest Union!
 
       </figcaption>
     </figure>
@@ -324,7 +324,7 @@
     <figure class="figure">
       <img src="static/members/image24.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Fan Yang</figcaption>
-      <figcaption class="figure-caption">Like to explore and learn new things, cheerful personality, with a certain experience in interviewing and writing. It is the first time to join igem related competitions, I hope I can contribute my strength, progress together with everyone, work together, and achieve good results
+      <figcaption class="figure-caption">Like to explore and learn new things, cheerful personality, with a certain experience in interviewing and writing. It is the first time to join iDEC related competitions, I hope I can contribute my strength, progress together with everyone, work together, and achieve good results
       </figcaption>
     </figure>
   </div>
@@ -340,7 +340,7 @@
     <figure class="figure">
       <img src="static/members/image26.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Yingqi Ma</figcaption>
-      <figcaption class="figure-caption">Hello everyone, I am curious about all kinds of interesting knowledge, from astronomy and geography to history and culture, from science and technology to humanities and social sciences. Academically, I have a keen interest in medical research. I have participated in the university's innovation project and the cross-over project of new medicine, and I have a good ability to speak and listen English. I believe that our research will help us solve many medical problems and make important contributions to the development of human health. Therefore, I am very much looking forward to participating in this IGEM project and working together with you in this iGEM competition to achieve new achievements!
+      <figcaption class="figure-caption">Hello everyone, I am curious about all kinds of interesting knowledge, from astronomy and geography to history and culture, from science and technology to humanities and social sciences. Academically, I have a keen interest in medical research. I have participated in the university's innovation project and the cross-over project of new medicine, and I have a good ability to speak and listen English. I believe that our research will help us solve many medical problems and make important contributions to the development of human health. Therefore, I am very much looking forward to participating in this iDEC project and working together with you in this iDEC competition to achieve new achievements!
       </figcaption>
     </figure>
   </div>
@@ -432,7 +432,7 @@
     <figure class="figure">
       <img src="static/members/image34.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Weihan Kang</figcaption>
-      <figcaption class="figure-caption">Participated in iGEM 2023 and is now an advisor of LZU-MEDICINE-CHINA.
+      <figcaption class="figure-caption">Participated in iDEC 2023 and is now an advisor of Northwest Union.
       </figcaption>
     </figure>
   </div>
@@ -467,7 +467,7 @@
     <figure class="figure">
       <img src="static/members/image38.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Yijing Jiang</figcaption>
-      <figcaption class="figure-caption">Optimistic and positive, the courage to explore new knowledge, half full, very sensitive, like listening to music, watching movies, and like-minded friends party. I hope I can put what I have learned into practice, make a contribution to the team, leave my own traces in the team, and shine with LZU-CHINA iGEM!
+      <figcaption class="figure-caption">Optimistic and positive, the courage to explore new knowledge, half full, very sensitive, like listening to music, watching movies, and like-minded friends party. I hope I can put what I have learned into practice, make a contribution to the team, leave my own traces in the team, and shine with LZU-CHINA iDEC!
       </figcaption>
     </figure>
   </div>
@@ -485,7 +485,7 @@
     <figure class="figure">
       <img src="static/members/image40.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Zhaocheng Li</figcaption>
-      <figcaption class="figure-caption">Undergraduate student of Biology, Lanzhou University, member of 2023 LZU IGEM TEAM. Familiar with IGEM and have great passion for synthetic biology, biomedicine and other fields.
+      <figcaption class="figure-caption">Undergraduate student of Biology, Lanzhou University, member of 2023 LZU iDEC TEAM. Familiar with iDEC and have great passion for synthetic biology, biomedicine and other fields.
       </figcaption>
     </figure>
   </div>
@@ -514,9 +514,9 @@
     <figure class="figure">
       <img src="static/members/image43.webp" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Weining Wang</figcaption>
-      <figcaption class="figure-caption">Hello, my name is Weining Wang, and it is a great honor to join our dynamic iGEM team. I am passionate about genetic engineering and am very excited to be involved in such an innovative and challenging project.
+      <figcaption class="figure-caption">Hello, my name is Weining Wang, and it is a great honor to join our dynamic iDEC team. I am passionate about genetic engineering and am very excited to be involved in such an innovative and challenging project.
         <br>I am outgoing and enjoy communicating with people. I believe that teamwork is the key to achieving goals. In the team, I am willing to actively contribute my ideas and efforts, and look forward to learning more from my teammates.
-        <br> My experience at the School of Stomatology has given me a deep understanding of biomedicine, which I believe will contribute to our research and experiments in the iGEM program. I look forward to exploring the mysteries of genetic engineering with you and creating amazing results together.
+        <br> My experience at the School of Stomatology has given me a deep understanding of biomedicine, which I believe will contribute to our research and experiments in the iDEC program. I look forward to exploring the mysteries of genetic engineering with you and creating amazing results together.
         <br> Let's work together, enjoy every moment of this journey, meet challenges and create brilliance together!
         
 
