members-picture-amend

--- a/wiki/pages/members.html
+++ b/wiki/pages/members.html
@@ -175,7 +175,7 @@
   </div>
   <div class="col-4">
     <figure class="figure">
-      <img src=" {{ url_for('static', filename = 'members/image18.webp') }} class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
+      <img src=" {{ url_for('static', filename = 'members/image18.webp') }}" class="rounded mx-auto d-block figure-img img-fluid rounded" alt="..." style="width:30vw">
       <figcaption class="figure-caption">Xuanqiao Wang</figcaption>
       <figcaption class="figure-caption">Favorite sport is football, usually like to play mc and radiation shelter (a little niche). Strong practical ability, once won the provincial second prize in physics competition in high school. It is a great honor to join the iDEC team and hope to work together to achieve good results.</figcaption>
     </figure>
