--- a/sustainable.html
+++ b/sustainable.html
@@ -95,11 +95,16 @@
 	        <p class="lead mb-5 text-white-50"></p>
         </div>
       </div>
+      <div class="to-top">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16" style="color:white">
+          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
+        </svg>
+      </div>
     </div>
   </header>
 
   <!-- Page Content -->
-  <div class="container">
+  <div class="content-container">
     
 
 
@@ -276,5 +281,6 @@
 
   <!-- Bootstrap Bundle with Popper -->
   <script src="static/bootstrap.bundle.min.js"></script>
+  <script src="static/control.js"></script>
 </body>
 </html>
