deploy: 1a91c2c87cb507af60fdf7ca4ba21ac9f552d24b

--- a/education.html
+++ b/education.html
@@ -73,7 +73,6 @@
             <li> <a class="dropdown-item" href="education.html">Education</a></li>
             <li> <a class="dropdown-item" href="sustainable.html">Sustainable Development Impact</a></li>
             <li> <a class="dropdown-item" href="entrepreneurship.html">Entrepreneurship</a></li>
-            <li> <a class="dropdown-item" href="collaboration.html">Collaboration</a></li>
           </ul>
         </li>
 
@@ -615,7 +614,7 @@
   
   </p>
   <h4>Social media: an amplifier of voices</h4>
-  <p>In the digital age, social media has become an important channel for information dissemination. The Northwest Union Northwest Union makes full use of this platform to release the content of brochures, share team stories and interact with global netizens through social media accounts such as Weibo, wechat public account, Facebook, Twitter and so on. These lively and interesting posts not only attracted a lot of attention and likes, but also stimulated the public's attention and discussion on health issues, which formed a good social effect. We have created a manual on educational equity, calling for greater equality in education around the world. Let education break through barriers</p>
+  <p>In the digital age, social media has become an important channel for information dissemination. The Northwest Union makes full use of this platform to release the content of brochures, share team stories and interact with global netizens through social media accounts such as Weibo, wechat public account, Facebook, Twitter and so on. These lively and interesting posts not only attracted a lot of attention and likes, but also stimulated the public's attention and discussion on health issues, which formed a good social effect. We have created a manual on educational equity, calling for greater equality in education around the world. Let education break through barriers</p>
   <iframe src="static/education/Education%20Brochure%20(EN).pdf " frameborder="0" style="width:75vw; height:85vh;margin: 15px;"></iframe>
   <iframe src="static/education/Education%20Brochure%20(CN).pdf " frameborder="0" style="width:75vw; height:85vh;margin: 15px;"></iframe>
 
