--- a/wiki/menu.html
+++ b/wiki/menu.html
@@ -44,6 +44,10 @@
 
           </ul>
         </li>
+        <!-- Model -->
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('pages', page='model') }}">Model</a>
+        </li>
 
         <!---- SAFETY ---->
         <li class="nav-item">
