--- a/entrepreneurship.html
+++ b/entrepreneurship.html
@@ -57,6 +57,10 @@
 
           </ul>
         </li>
+        <!-- Model -->
+        <li class="nav-item">
+          <a class="nav-link" href="model.html">Model</a>
+        </li>
 
         <!---- SAFETY ---->
         <li class="nav-item">
