part-Home-picture

--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
   
 {% block title %}Description{% endblock %}
+{% block backgroundImage %}url(../static/description/image1.webp){% endblock %}
 {% block lead %}Our introduction{% endblock %}
 
 {% block page_content %}
