--- a/wiki/pages/hardware.html
+++ b/wiki/pages/hardware.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
   
 {% block title %}Hardware{% endblock %}
+{% block backgroundImage %}url(../static/hardware/image1.webp){% endblock %}
+
 {% block lead %}{% endblock %}
 
 {% block page_content %}
