--- a/wiki/pages/notebook.html
+++ b/wiki/pages/notebook.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
   
 {% block title %}Notebook{% endblock %}
-{% block lead %}Document the dates you worked on your project. This should be a detailed account of the work done each day for your project.{% endblock %}
+{% block backgroundImage %}url(../static/notebook/image1.webp){% endblock %}
+
+{% block lead %}{% endblock %}
 
 {% block page_content %}
 
