--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
   
-{% block title %}Contribution{% endblock %}
+{% block title %}Contributions{% endblock %}
+{% block backgroundImage %}url(../static/contributions/image1.webp){% endblock %}
+
 {% block lead %}{% endblock %}
 
 {% block page_content %}
