--- a/wiki/pages/entrepreneurship.html
+++ b/wiki/pages/entrepreneurship.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 
 {% block title %}Entrepreneurship{% endblock %}
+{% block backgroundImage %}url(../static/entrepreneurship/image1.webp){% endblock %}
+
 {% block lead %}Product development idea: the birth and growth of SugarGuardian.{% endblock %}
 
 {% block page_content %}
