--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
   
 {% block title %}Integrated human practice{% endblock %}
+{% block backgroundImage %}url(../static/hp/image1.webp){% endblock %}
+
 {% block lead %}{% endblock %}
 
 {% block page_content %}
