--- a/wiki/pages/results.html
+++ b/wiki/pages/results.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
   
+
 {% block title %}Results{% endblock %}
+{% block backgroundImage %}url(../static/result/image3.webp){% endblock %}
 {% block lead %}{% endblock %}
 
 {% block page_content %}
