--- a/wiki/pages/safety.html
+++ b/wiki/pages/safety.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
   
 {% block title %}Safety{% endblock %}
+{% block backgroundImage %}url(../static/safety/image3.webp){% endblock %}
+
 {% block lead %}{% endblock %}
 
 {% block page_content %}
