--- a/wiki/pages/sustainable.html
+++ b/wiki/pages/sustainable.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
   
 {% block title %}Sustainability{% endblock %}
+{% block backgroundImage %}url(../static/sustainability/image1.webp){% endblock %}
+
 {% block lead %}{% endblock %}
 
 {% block page_content %}
