--- a/engineering.html
+++ b/engineering.html
@@ -48,9 +48,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="engineering.html">Engineering</a></li>
-
             <li> <a class="dropdown-item" href="results.html">Results</a></li>
-
             <li><a class="dropdown-item" href="hardware.html">Hardware</a></li>
             <li> <a class="dropdown-item" href="protocol.html">Protocol</a></li>
             <li> <a class="dropdown-item" href="notebook.html">Notebook</a></li>
@@ -90,20 +88,24 @@
 </nav>
 
   <!-- Header -->
-  <header class="bg-hero py-5 mb-5">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-lg-12">
-          <h1 class="display-4 text-white mt-5 mb-2">Engineering</h1>
-	        <p class="lead mb-5 text-white-50"></p>
+  <header class="bg-hero py-5 mb-5" style="background-image:">
+    <div class="blur-layer">
+      <div class="container h-100">
+        <div class="row h-100 align-items-center">
+          <div class="col-lg-12">
+            <h1 class="display-4 mt-5 mb-2">Engineering</h1>
+            <p class="lead mb-5"></p>
+          </div>
+        </div>
+        <div class="to-top">
+          <span style="color:white">Back To Top</span>
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-up-circle" viewBox="0 0 16 16" color="orange">
+            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
+          </svg>
         </div>
       </div>
-      <div class="to-top">
-        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16" style="color:white">
-          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
-        </svg>
-      </div>
     </div>
+
   </header>
 
   <!-- Page Content -->
